# ToyVpn-PcapPlusPlus

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  build.gradle  build.gradle.kts  build_pcapplusplus.sh  import-summary.txt  lint.xml  settings.gradle  settings.gradle.kts
.github/workflows/: build_and_test.yml  builtAndTest.yml
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/pcapplusplus/toyvpn/: ConnectScreenTest.kt  StatsScreenTest.kt  TestUtils.kt  ToyVpnServiceEstablishVpnConnectionTest.kt  ToyVpnServiceForwardTrafficTest.kt  ToyVpnServiceHandshakeTest.kt  ToyVpnServiceManagerTest.kt  ToyVpnViewModelTest.kt
app/src/androidTest/java/com/pcapplusplus/toyvpn/pcapplusplus/: PacketProcessorTest.kt  PcapPlusPlusInterfaceTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PacketAnalyzer.cpp  pcapplusplus_interface.cpp
app/src/main/java/com/example/android/pcapplusplus/: NetworkStats.kt  PcapPlusPlusInterface.kt
app/src/main/java/com/example/android/toyvpn/: ToyVpnConnection.java
app/src/main/java/com/pcapplusplus/toyvpn/: ConnectScreen.kt  MainActivity.kt  SharedPreferencesProvider.kt  StatsScreen.kt  ToyVpnService.kt  ToyVpnServiceManager.kt  ToyVpnViewModel.kt  Utils.kt
app/src/main/java/com/pcapplusplus/toyvpn/model/: BroadcastActions.kt  DomainData.kt  DomainTracker.kt  PacketData.kt  TimeProvider.kt  VpnConnectionState.kt  VpnSettings.kt
app/src/main/java/com/pcapplusplus/toyvpn/pcapplusplus/: PacketProcessor.kt  PcapPlusPlusInterface.kt
app/src/main/java/com/pcapplusplus/toyvpn/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: pcapplusplus_logo.xml  pcapplusplus_logo_foreground.xml
app/src/main/res/mipmap-anydpi-v26/: pcapplusplus_logo.xml
app/src/main/res/values/: pcapplusplus_logo_background.xml  strings.xml  themes.xml
app/src/test/java/com/pcapplusplus/toyvpn/: HumanizeTest.kt
app/src/test/java/com/pcapplusplus/toyvpn/model/: DomainTrackerTest.kt  VpnSettingsTest.kt
docs/: Disconnect.txt  EstablishVpnConnection.txt  ForwardNetworkTraffic.txt  architecture.drawio
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
server/: .gitignore  CMakeLists.txt  ClientHandler.h  EpollWrapper.h  IpForwardingWrapper.h  Log.h  NatAndRoutingWrapper.h  PacketHandler.h  README.md  ToyVpnConfiguration.h  TunInterfaceWrapper.h  Utils.h  main.cpp
server/libs/argparse/: README.md
server/linux/: .gitignore  CMakeLists.txt  ClientHandler.h  EpollWrapper.h  IpForwardingWrapper.h  Log.h  Makefile  NatAndRoutingWrapper.h  PacketHandler.h  ServerSocketWrapper.h  ToyVpnConfiguration.h  ToyVpnServer.h  ToyVpnServerLegacy.cpp  TunInterfaceWrapper.h  Utils.h  VpnSettings.h  main.cpp
server/linux/legacy/: ToyVpnServer.cpp  setup.sh
server/linux/libs/AixLog/: README.md
server/linux/libs/concurrentqueue/: README.md
